improve audio test by using mono version

--- a/testing/tech.html
+++ b/testing/tech.html
@@ -19,7 +19,7 @@
 
 <body>
     <h1>Stereo Sound Test</h1>
-    <audio src="urban-seattle.mp3" controls></audio>
+    <audio src="urban-seattle_mono.mp3" controls></audio>
     <br />
     <label for="balanceSlider">Balance: </label>
     <input type="range" id="balanceSlider" min="-1" max="1" step="0.01" value="0">
