--- a/stereo/index.html
+++ b/stereo/index.html
@@ -41,6 +41,8 @@ It's free to use and without any download. Just open it in your browser and star
     <label for="volumeSlider">Volume</label>
     <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="100">
     <button id="playPauseButton">Play</button>
+    <br />
+    <input type="checkbox" checked id="autoModeCheckbox" />
 
     <script src="./dist/main.js"></script>
 </body>
