--- a/stereo/index.html
+++ b/stereo/index.html
@@ -40,7 +40,7 @@ It's free to use and without any download. Just open it in your browser and star
     <br />
     <label for="volumeSlider">Volume</label>
     <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="100">
-    <button id="playPauseButton">Play</button>
+    <button id="playPauseButton">Start</button>
     <br />
     <input type="checkbox" checked id="autoModeCheckbox" />
 
