feat: add favicons

--- a/stereo/index.html
+++ b/stereo/index.html
@@ -17,6 +17,13 @@ It's free to use and without any download. Just open it in your browser and star
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StereoScout: Online Stereo Sound Test for Headphones & Speakers</title>
     <meta name="description" content="StereoScout is a user-friendly online tool designed to test the stereo sound of your headphones and speakers. Effortlessly check the balance and placement of your audio setup using our free web app. No downloads required - open in any browser and start testing with the StereoPannerNode feature from AudioContext. Ideal for audiophiles, music enthusiasts, and anyone looking to ensure their audio devices are functioning perfectly.">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#161616">
+    <meta name="msapplication-TileColor" content="#161616">
+    <meta name="theme-color" content="#161616">
     <style>
         body {
             text-align: center;
