--- a/stereo/index.html
+++ b/stereo/index.html
@@ -39,7 +39,7 @@ It's free to use and without any download. Just open it in your browser and star
 <body>
     <h1>Stereo Sound Test</h1>
     <p>StereoScout is a free, browser-based tool for testing the stereo sound of your headphones and speakers. </p>
-    <audio src="urban-seattle_mono.mp3" loop></audio>
+    <audio src="stereo-test-sound.mpeg" loop></audio>
     <br />
     <button id="leftSpeaker">Left</button>
     <input type="range" id="balanceSlider" min="-1" max="1" step="0.01" value="0">
