feat: Add link to Beat by Cabanostra

--- a/stereo/index.html
+++ b/stereo/index.html
@@ -51,6 +51,8 @@ It's free to use and without any download. Just open it in your browser and star
     <br />
     <input type="checkbox" checked id="autoModeCheckbox" />
 
+    <a target="_blank" rel="nofollow" href="https://open.spotify.com/artist/50ZVgqrmmVYDy1cCwFucD8?si=skHuvs5FTIiBI3xw9yc3MA">Beat by Cabanostra</a>
+
     <script src="./dist/main.js"></script>
 </body>
 
